frontend/test/should_fail/index_mm_max_node.grg
#using "index_min_max_size_model.gm"

rule r {
	n:N -e:E->;
	if { maxNodeFromIndex(n) in nodesFromIndex(fooi); }
	
	modify {
	}
}
